Added kover and MovieRepository Test